ActionsPanel changes to fixed positioning if out of view due to loaded image dimensions

--- a/src/stylesheets/abstracts/_mixins.scss
+++ b/src/stylesheets/abstracts/_mixins.scss
@@ -9,3 +9,15 @@
     @content;
   }
 }
+
+@mixin widescreen() {
+  @media (min-width: $widescreen-breakpoint * 1px){
+    @content;
+  }
+}
+
+@mixin fullhd() {
+  @media (min-width: $fullhd-breakpoint * 1px){
+    @content;
+  }
+}
