--- a/src/stylesheets/abstracts/_variables.scss
+++ b/src/stylesheets/abstracts/_variables.scss
@@ -6,6 +6,7 @@ $baseline-margin: $body-line-height * 1em;
 $mobile-breakpoint: 760;
 $desktop-breakpoint: 960;
 $widescreen-breakpoint: 1200;
+$fullhd-breakpoint: 1400;
 
 // Colors
 $accent-color: #FF3B38;
